--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.username=${JDBC_USERNAME}
 #spring.datasource.password=${JDBC_PASSWORD}
 
-#JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/openai-demo;JDBC_USERNAME=dev;JDBC_PASSWORD=ax2
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 server.error.include-message=always
 
-
+spring.datasource.url=jdbc:mysql://localhost:3306/country
+spring.datasource.username=root
+spring.datasource.password=
 app.api-key=${API_KEY}
